tests/type/bad/record_unknown_field.hel
foreign io_unit: IO<()>;

type Point = { x: i32, y: i32 };

p = Point{ x: 1, y: 2 };
x = p.bogus;

main = io_unit;
